# smarthome-backend

./: .gitignore  Cargo.toml  README.md
database/: Cargo.toml  diesel.toml
database/migrations/2019-05-13-170044_create_users/: up.sql
database/migrations/2019-05-13-174808_create_dashboards/: up.sql
database/migrations/2019-05-13-180813_create_categories/: up.sql
database/migrations/2019-05-13-180947_create_widgets/: down.sql  up.sql
database/migrations/2019-05-19-150430_create_dashboards/: down.sql  up.sql
database/migrations/2020-01-19-180152_create_dashboard_folders/: down.sql  up.sql
database/src/: actions.rs  lib.rs  models.rs  schema.rs
database/src/actions/: category.rs  dashboard.rs  dashboard_folder.rs  datapoint.rs  ts_number.rs  user.rs  widget.rs
database/src/models/: category.rs  dashboard.rs  dashboard_folder.rs  datapoint.rs  ts_number.rs  user.rs  widget.rs
hyperion-rs/: Cargo.toml
hyperion-rs/src/: lib.rs
server/: .env  Cargo.toml  run.bat
server/cert/: invalid.cer  invalid.key
server/src/: api.rs  app.rs  errors.rs  main.rs  models.rs
server/src/api/: auth.rs  socket.rs
server/src/api/auth/: handler.rs  routes.rs  utils.rs
server/src/api/dashboard/: handler.rs  routes.rs
server/src/api/dashboard_folder/: handler.rs  routes.rs
server/src/api/file/: handler.rs  routes.rs
server/src/api/hyperion/: handler.rs  routes.rs
server/src/api/iobroker/: handler.rs  routes.rs
server/src/api/socket/: handler.rs  routes.rs
server/src/api/widget/: handler.rs  routes.rs
server/web/: app.04164dc3552d7041b973.hot-update.js  app.js  index.html
server/web/css/: app.c2692805.css
server/web/js/: app.289b6854.js  app.289b6854.js.map  chunk-vendors.905391be.js  chunk-vendors.905391be.js.map
