[package]
name = "database"
version = "0.1.0"
authors = ["Daniel Holzner <danielholzner@gmx.de>"]
edition = "2018"

[dependencies]
log = "0.4"
diesel = { version = "1.4", features = ["postgres", "r2d2", "serde_json"] }
diesel_migrations = "1.4"
dotenv = "0.14"
djangohashers = { version = "1.0.1", default-features = false, features = ["with_bcrypt", "with_pbkdf2"] }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
