[package]
name = "server"
version = "0.1.0"
authors = ["Daniel Holzner <danielholzner@gmx.de>"]
edition = "2018"

[dependencies]
database = { path = "../database" }
hyperion-rs = { path = "../hyperion-rs" }
actix = { version = "0.8", features = ["http"] }
actix-files = "0.1.0-beta"
actix-service = "0.4"
actix-identity = "0.1"
env_logger = "0.6"
rustls = { version = "0.15", optional = true }
actix-web = { version = "1.0.0-rc", features = ["rust-tls"] }
actix-multipart = "0.1.4"
dotenv = "0.14"
frank_jwt = "3.1"
serde_json = "1.0"
serde_derive="1.0"
serde = "1.0"
chrono = "0.4"
derive_more = "0.14"
futures = "0.1"
diesel = "1.4"
openssl = { version= "0.10", features = ["vendored"] }
bcrypt = "0.4"
funksteckdose = { version = "0.1.0", optional = true, features = ["wiringpi"] }
reqwest = { version="0.10.0-alpha.2", features = ["blocking"] }

[features]
wiring-pi = ["funksteckdose"]
rust-tls = ["rustls"]
